--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@ theme: minima
 
 minima:
   skin: solarized
-author:
-  name: Tobias Schulz-Hess
-  # email: "github.page@schulz-hess.de"
+#author:
+#  name: Tobias Schulz-Hess
+#  email: "github.page@schulz-hess.de"
 social_links:
   twitter: ToBe_HH
   github: tobehh
@@ -34,3 +34,5 @@ social_links:
   # youtube: Tobias Schulz-Hess
   youtube_channel: UCbtMFRDhXJy5ThobWxt3Ogw
   youtube_channel_name: Tobias Schulz-Hess
+twitter:
+  username: ToBe_HH
